[tool.poetry]
name = "ocr-miner"
version = "0.1.0"
description = ""
authors = ["melih isbilen <melihisbilen@tutanota.de>"]
readme = "README.md"
packages = [{include = "ocr_miner"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.20"
fastapi = "^0.101.1"
dynaconf = "^3.2.1"
click = "^8.1.6"
pydantic = "^2.1.1"
psycopg-binary = "^3.1.10"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.7"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
python-magic = "^0.4.27"
tesseract = "^0.1.3"
pytesseract = "^0.3.10"
opencv-python-headless = "^4.8.0.76"
email-validator = "^2.0.0.post2"
pyvat = "^1.3.17"
mypy = "^1.5.1"
redis = "^5.0.0"
fastapi-cache2 = "^0.2.1"
gunicorn = "^21.2.0"
testing-postgresql = "^1.3.0"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
